--- a/blacksmith-docs/docs/util/meepmeep/persistence.mdx
+++ b/blacksmith-docs/docs/util/meepmeep/persistence.mdx
@@ -95,6 +95,7 @@ same place it was closed
 
   ```java
   public static void main(String[] args) {
+      // 14361 was here
       MeepMeep meepMeep = new MeepMeep(...);
 
       // Restores the previous window state of the meepMeep instance
@@ -108,6 +109,7 @@ same place it was closed
 
   ```kotlin
   fun main() {
+      // 14361 was here
       val meepMeep = MeepMeep(...)
 
       // Restores the previous window state of the meepMeep instance
