--- a/blacksmith-docs/docs/util/kt/configkt.mdx
+++ b/blacksmith-docs/docs/util/kt/configkt.mdx
@@ -13,6 +13,12 @@ import TabItem from '@theme/TabItem';
 
 FTCDashboard's `@Config`, but for Kotlin
 
+:::warning
+Doesn't actually work yet l0l, haven't had the time to actually test it and work out the kinks.
+
+Don't use it, it won't do anything.
+:::
+
 Usage examples:
 
 ```kt Method 1
