--- a/blacksmith-docs/docs/util/overview.mdx
+++ b/blacksmith-docs/docs/util/overview.mdx
@@ -14,5 +14,7 @@ Blacksmith provides a variety of utilities, including:
    - [LateinitVal](./kt/lateinitval)
    - [A cleaner hwMap.get()](./kt/better-hwmap-get)
    - [@ConfigKt: no more `@JvmStatic` spam!1!!](./kt/configkt)
+ - [@CreateOnGo/@EvalOnGo in BlackOp](../black-op/overview)
  - [MeepMeepPersistence to automagically restore reopen the MeepMeep window where you left it](./meepmeep/persistence)
+ - [Kalman filter magic](./kalmanfilters/kalmanfilter-object)
  - More coming as soon I think of stuff
