--- a/blacksmith-docs/docs/black-op/create-on-go-java.mdx
+++ b/blacksmith-docs/docs/black-op/create-on-go-java.mdx
@@ -9,6 +9,11 @@ a few extra utilities, and it's made for use with the Blacksmith Library.
 **If you're using Kotlin, check out [createOnGo/evalOnGo](./create-on-go-kt) for a more versatile and idiomatic method**
 :::
 
+:::warning
+This is partially in beta, so if you find your code crashing when you add this and it works if you
+remove it, don't be surprised. It should work though, from my testing.
+:::
+
 :::tip
 If you need to instantiate a class that needs parameters, or just want to use the return value of
 a method, check out [@EvalOnGo](./eval-on-go-java) instead!
