--- a/blacksmith-docs/docs/black-op/eval-on-go-java.mdx
+++ b/blacksmith-docs/docs/black-op/eval-on-go-java.mdx
@@ -9,6 +9,11 @@ a few extra utilities, and it's made for use with the Blacksmith Library.
 **If you're using Kotlin, check out [createOnGo/evalOnGo](./create-on-go-kt) for a more versatile and idiomatic method**
 :::
 
+:::warning
+This is partially in beta, so if you find your code crashing when you add this and it works if you
+remove it, don't be surprised. It should work though, from my testing.
+:::
+
 :::tip
 If you're instantiating a class that doesn't need any args, or only takes a `hardwareMap`, check out
 [@CreateOnGo](./create-on-go-java) instead!
