--- a/blacksmith-docs/docs/overview.mdx
+++ b/blacksmith-docs/docs/overview.mdx
@@ -17,6 +17,11 @@ that serve only to distract you and add more potential points of failure.
 
 **Kalman filter wizardry by T-Lind (TXKL#1554)**
 
+:::tip
+Consider giving our [repo](https://github.com/RR-9527/robot-code-v2/) a star if you like it, but of
+course you don't have to
+:::
+
 :::info
 All code documentation provide both Java and Kotlin examples
 :::
@@ -41,8 +46,9 @@ The Blacksmith Library provides a few different things:
 
 I recommend checking those out for examples of each.
 
-**If you use Kotlin (or even if you don't honestly), I highly recommend checking out our codebase in TeamCode to see how
-Blacksmith is used in actual code**
+**If you use Kotlin (or even if you don't honestly), I highly recommend checking out our
+[codebase](https://github.com/RR-9527/robot-code-v2/) in TeamCode to see how Blacksmith is used in
+actual code**
 
 Here's a basic example of a TeleOp before and after using Blacksmith:
 
@@ -185,4 +191,4 @@ The performance impact is negligible; CPUs are fast, and you have other things t
 This API is simply a couple layers of abstraction on top of the existing FTC SDK, and is in no way computationally
 expensive.
 
-Plus... the majority of the overhead is just at initialization time and clears up fairly quickly
+Plus... the majority of the overhead is just at initialization time and clears up pretty quickly
