--- a/blacksmith-docs/docs/anvil/overview.mdx
+++ b/blacksmith-docs/docs/anvil/overview.mdx
@@ -1,5 +1,7 @@
 ---
 sidebar_position: 0
+description: An overview of Anvil, a wrapper around Roadrunner 0.5.x which makes auto programming easier, faster, and makes the autos themselves better as well!
+keywords: [anvil, easy, roadrunner, fast, threads, trajectory]
 ---
 
 import Tabs from '@theme/Tabs';
