--- a/blacksmith-docs/docs/black-op/overview.mdx
+++ b/blacksmith-docs/docs/black-op/overview.mdx
@@ -1,5 +1,7 @@
 ---
 sidebar_position: 0
+description: An overview of BlackOp, Blacksmith's own extension to LinearOpMode, which works well with the rest of Blacksmith to enable many useful features
+keywords: [blackop, opmode, easy, createongo, evalongo, global]
 ---
 
 import Tabs from '@theme/Tabs';
