--- a/blacksmith-docs/docs/overview.mdx
+++ b/blacksmith-docs/docs/overview.mdx
@@ -1,5 +1,7 @@
 ---
 sidebar_position: -1
+description: An overview of Blacksmith and it's facilities, such as the Scheduler API, Anvil, BlackOp, it's Kalman Filters, and more!
+keywords: [scheduler, anvil, blackop, overview, kalman filter, utils, demo]
 ---
 
 import Tabs from '@theme/Tabs';
