--- a/blacksmith-docs/docs/scheduler-api/overview.mdx
+++ b/blacksmith-docs/docs/scheduler-api/overview.mdx
@@ -1,5 +1,7 @@
 ---
 sidebar_position: 0
+description: An overview of Blacksmith's Scheduler API, an extremely intuitive component that makes FTC software development much cleaner, much easier, and much faster to develop.
+keywords: [ftc, intuitive, scheduler, clean, easy]
 ---
 
 import Tabs from '@theme/Tabs';
