--- a/blacksmith-docs/docs/util/overview.mdx
+++ b/blacksmith-docs/docs/util/overview.mdx
@@ -1,5 +1,7 @@
 ---
 sidebar_position: 0
+description: A quick overview of Blacksmith's many diverse utilities (not fully updated)
+keywords: [kalman filter, units, math, kotlin, createongo, evalongo, meepmeep]
 ---
 
 # Overview
