--- a/blacksmith-docs/docs/installation.mdx
+++ b/blacksmith-docs/docs/installation.mdx
@@ -1,5 +1,7 @@
 ---
 sidebar_position: 0
+description: A guide to installing Blacksmith into your project, which is extremely simple. Blacksmith can be incrementally adopted as well-you only HAVE to use small parts of it!
+keywords: [install, gradle, blacksmith]
 ---
 
 # Installation
