--- a/blacksmith-docs/docs/scheduler-api/scheduler.mdx
+++ b/blacksmith-docs/docs/scheduler-api/scheduler.mdx
@@ -324,6 +324,7 @@ Registers a message receiver, which will be called whenever a message is sent wi
     name: 'message',
     type: 'Any',
     desc: 'The "message" to listen for, can be literally anything (doesn\'t have to be of any significant, just that both the sender and the receiver have to know it). NOTE: this uses .equals() to compare messages, so make sure the message is comparable in some way.',
+    typeLink: TypeLinks.OBJECT,
   },
   {
     name: 'block',
@@ -365,6 +366,9 @@ Clears and unhooks all of the listeners, clears all of the messages, clears the 
 
 Basically just a hard reset. But with a cooler name. Thanks GHCup.
 
+Optionally, if you want to only nuke specific parts of the Scheduler, you can pass in `Nuke.Listeners`,
+`Nuke.Messages`, or `Nuke.BeforeEach` (you can pass in multiple)
+
 <Tabs groupId="programming-language">
 <TabItem value="java" label="Java">
 
@@ -377,11 +381,15 @@ Basically just a hard reset. But with a cooler name. Thanks GHCup.
 
       Scheduler.on("message", () -> ...)
 
-      Scheduler.reset()
+      Scheduler.nuke()
 
       // Scheduler.beforeEach == () -> {}
       // Scheduler.listeners.size == 0
       // Scheduler.messages.size == 0
+
+      Scheduler.nuke(Nuke.Listeners) // Only nukes the listeners
+
+      Scheduler.nuke(Nuke.Listeners, Nuke.BeforeEach) // Nukes everything besides messages
   }
   ```
 
@@ -396,13 +404,26 @@ Basically just a hard reset. But with a cooler name. Thanks GHCup.
 
       Scheduler.on("message") {}
 
-      Scheduler.reset()
+      Scheduler.nuke()
 
       // Scheduler.beforeEach == () -> {}
       // Scheduler.listeners.size == 0
       // Scheduler.messages.size == 0
+
+      Scheduler.nuke(Nuke.Listeners) // Only nukes the listeners
+
+      Scheduler.nuke(Nuke.Listeners, Nuke.BeforeEach) // Nukes everything besides messages
   }
   ```
 
 </TabItem>
 </Tabs>
+
+<ParamsList params={[
+  {
+    name: 'toNuke',
+    type: 'vararg Nuke',
+    desc: 'What parts of the Scheduler to nuke (hard reset). Defaults to nuking everything.',
+    defaultsTo: 'Nuke.All',
+  },
+]}/>
