--- a/blacksmith-docs/docs/overview.mdx
+++ b/blacksmith-docs/docs/overview.mdx
@@ -175,6 +175,10 @@ class `CoolTeleOp😎` : BlackOp() {
 As you can see, the Blacksmith version is much different, but it's much more readable and easier to make changes to.
 It's easy to learn and only requires medium-level knowledge of Java.
 
+## I don't want to use all this magic
+
+That's fine! Blacksmith is incrementally adoptable and you only have to use the parts you want.
+
 ## I don't understand these symbols
 
 The guide does require some knowledge of Java, but it's not very hard to learn. If you're not familiar with Java, I recommend
