--- a/blacksmith-docs/docs/util/overview.mdx
+++ b/blacksmith-docs/docs/util/overview.mdx
@@ -15,7 +15,7 @@ Blacksmith provides a variety of utilities, including:
    - [Slightly nicer math utilities](./kt/math-utils-kt)
    - [LateinitVal](./kt/lateinitval)
    - [A cleaner hwMap.get()](./kt/better-hwmap-get)
-   - [@ConfigKt: no more `@JvmStatic` spam!1!!](./kt/configkt)
+   - [@ConfigKt: no more `@JvmField` spam!1!!](./kt/configkt)
  - [@CreateOnGo/@EvalOnGo in BlackOp](../black-op/overview)
  - [MeepMeepPersistence to automagically restore reopen the MeepMeep window where you left it](./meepmeep/persistence)
  - [Kalman filter magic](./kalmanfilters/kalmanfilter-object)
